@startuml
'https://plantuml.com/class-diagram

hide circle
hide footbox
skinparam classAttributeIconSize 0

Command <|-- RemoveCommand
FoodList <-- RemoveCommand
CommandResult <-- RemoveCommand
CommandResult <-- Command

class Command{
    +execute: CommandResult
}

class RemoveCommand{
    index: String
    +execute(foodList : FoodList) : CommandResult

}

class CommandResult{
    +feedbackToUser: String
    +printResult()
}

class FoodList{
    +removeFood()
}
@enduml